--- a/src/App.css
+++ b/src/App.css
@@ -1,33 +1,21 @@
+.superButton {
+  border: none;
+  background-color: black;
+  color: white;
+  border-radius: 2rem;
+  font-size: 1rem;
+}
 .App {
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.flexIT {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex: wrap;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.todoCard {
+  margin: 5px;
+  flex-grow: 1;
+  flex-basis: 250px;
+  padding: 10px;
 }
